@@ -52,6 +52,7 @@
     <services:pipeline id="performScreenValveTests2">
         <valves:analyzeURL />
         <valves:performScreen resultName="myresult" />
+        <valves:valve class="com.alibaba.citrus.turbine.pipeline.valve.PerformScreenValveTests$ReadResultValve" />
     </services:pipeline>
 
     <services:pipeline id="renderTemplate">
